apps/tcp-echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcp-echo
  namespace: tcp-echo
  labels:
    app.kubernetes.io/name: tcp-echo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tcp-echo
  ports:
    - name: tcp
      port: 9000
      targetPort: tcp
      protocol: TCP
