apps/tcp-echo/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcp-echo
  namespace: tcp-echo
spec:
  parentRefs:
    - name: eg-public
      namespace: envoy-gateway-system
      sectionName: tcp-echo
  rules:
    - backendRefs:
        - name: tcp-echo
          port: 9000
